Remove animations when going back/forward.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -8,6 +8,14 @@ body {
     position: relative;
 }
 
+body.no-anim  *{
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    -ms-transition: none !important;
+    -o-transition: none !important;
+    transition: none !important;
+}
+
 ul { margin-bottom: 0; }
 
 .no-click { pointer-events: none; }
