--- a/web/assets/styles/slider.css
+++ b/web/assets/styles/slider.css
@@ -70,12 +70,21 @@
 	height:100%;
 	position:relative;
 	margin:0 auto;
+    text-align: center;
 	/*background:transparent url('../images/gent1.jpg') no-repeat center center;*/
-	background-size: auto 100%;
+    overflow: hidden;
 }
 
 .ca-icon img{
     max-height: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translateY(-50%) translateX(-50%);
+    -moz-transform: translateY(-50%) translateX(-50%);
+    -ms-transform: translateY(-50%) translateX(-50%);
+    -o-transform: translateY(-50%) translateX(-50%);
+    transform: translateY(-50%) translateX(-50%);
 }
 
 /*
