--- a/web/views/about.twig
+++ b/web/views/about.twig
@@ -2,8 +2,8 @@
 
 {% block content %}
     <div class="bg bgh"></div>
-    <img class="bg bg1" src="{{ app.request.getBasePath() }}/web/assets/images/bg1-4.png" alt="bg"/>
-    <img class="bg bg2 shown-bg" src="{{ app.request.getBasePath() }}/web/assets/images/bg2-4.png" alt="bg"/>
+    <img class="bg bg1 shown-bg" src="{{ app.request.getBasePath() }}/web/assets/images/bg1-4.png" alt="bg"/>
+    <img class="bg bg2" src="{{ app.request.getBasePath() }}/web/assets/images/bg2-4.png" alt="bg"/>
     <img src="{{ app.request.getBasePath() }}/web/assets/images/bg1-brush.png" class="brush" alt="Brush Overlay"/>
     <div class="mobile-overlay"></div>
     <nav class="mobile-nav">
@@ -26,13 +26,13 @@
     </nav>
     <div class="mobile-menu">
         <ul>
-            <li class="active">
+            <li>
                 <a href="#" class="go go-home">Home</a>
             </li>
             <li>
                 <a href="#" class="go go-gallery">Gallery</a>
             </li>
-            <li>
+            <li class="active">
                 <a href="#" class="go go-about">About</a>
             </li>
             <li>
@@ -40,37 +40,16 @@
             </li>
         </ul>
     </div>
-    <header class="head0">
-        <div class="inner-header">
-            <ul>
-                <li class="active">
-                    <a href="#" class="go logo go-home"><img src="{{ app.request.getBasePath() }}/web/assets/images/sig-1-bb.png" alt="Strackovski Logo"/></a>
-                </li>
-                <li>
-                    <a href="#" class="go go-gallery"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-gallery-b.png" alt="Gallery"/></a>
-                </li>
-                <li>
-                    <a href="#" class="go go-about"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-about-b.png" alt="About"/></a>
-                </li>
-                <li class="pull-right">
-                    <a href="#" class="stamp-link"><img src="{{ app.request.getBasePath() }}/web/assets/images/behance.png" alt="Behance badge"/></a>
-                </li>
-                <li class="pull-right">
-                    <a href="#" class="go-popup go-contact"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-contact-b.png" alt="Contact"/></a>
-                </li>
-            </ul>
-        </div>
-    </header>
-    <header class="head1">
+    <header class="head0 shown-header">
         <div class="inner-header">
             <ul>
                 <li>
                     <a href="#" class="go logo go-home"><img src="{{ app.request.getBasePath() }}/web/assets/images/sig-1.png" alt="Strackovski Logo"/></a>
                 </li>
-                <li class="active">
-                    <a href="#" class="go go-gallery"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-gallery-bb.png" alt="Gallery"/></a>
-                </li>
                 <li>
+                    <a href="#" class="go go-gallery"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-gallery-b.png" alt="Gallery"/></a>
+                </li>
+                <li class="active">
                     <a href="#" class="go go-about"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-about-b.png" alt="About"/></a>
                 </li>
                 <li class="pull-right">
@@ -82,29 +61,7 @@
             </ul>
         </div>
     </header>
-    <header class="head2 shown-header">
-        <div class="inner-header">
-            <ul>
-                <li>
-                    <a href="#" class="go logo go-home"><img src="{{ app.request.getBasePath() }}/web/assets/images/sig-2.png" alt="Strackovski Logo"/></a>
-                </li>
-                <li>
-                    <a href="#" class="go go-gallery"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-gallery-g.png" alt="Gallery"/></a>
-                </li>
-                <li class="active">
-                    <a href="#" class="go go-about"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-about-gg.png" alt="About"/></a>
-                </li>
-                <li class="pull-right">
-                    <a href="#" class="stamp-link"><img src="{{ app.request.getBasePath() }}/web/assets/images/behance.png" alt="Behance badge"/></a>
-                </li>
-                <li class="pull-right">
-                    <a href="#" class="go-popup go-contact"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-contact-g.png" alt="Contact"/></a>
-                </li>
-            </ul>
-        </div>
-    </header>
-    <div class="ho ho1"></div>
-    <div class="ho ho2 shown-ho"></div>
+    <div class="ho ho1 shown-ho"></div>
     <div class="holder">
         <div class="con con0">
             <div id="ca-container" class="ca-container">
@@ -113,7 +70,7 @@
                         <div class="ca-item ca-item-{{ i }}">
                             <div class="ca-item-main">
                                 <div class="ca-icon">
-                                    <img src="{{ app.request.getBasePath() }}/web/assets/images/{{ item }}" alt=""/>
+                                    <img src="{{ app.request.getBasePath() }}/web/artwork/{{ item }}" alt=""/>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +83,7 @@
                 {% for item in artwork %}
                     <div class="col-sm-3 col-xs-6">
                         <div class="thumb">
-                            <img src="{{ app.request.getBasePath() }}/web/assets/images/{{ item }}" alt="img"/>
+                            <img src="{{ app.request.getBasePath() }}/web/artwork/{{ item }}" alt="img"/>
                             <div class="preview" data-title="{{ item }}">
                                 <i class="fa fa-search fa-2x"></i>
                             </div>
@@ -139,7 +96,7 @@
             <div class="about-section">
                 <div class="more"><a href="#"><img src="{{ app.request.getBasePath() }}/web/assets/images/arrow2.png" alt="More"/></a></div>
                 <div class="section shown-section">
-                    <h1><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-author-b.png" alt="The Author"/></h1>
+                    <h1><img class="about-txt" src="{{ app.request.getBasePath() }}/web/assets/images/txt-author-b.png" alt="The Author"/></h1>
                     <div class="row">
                         <div class="col-sm-11 col-lg-10 col-xs-12">
                             <p>
@@ -160,7 +117,7 @@
                     </div>
                 </div>
                 <div class="section hidden-section">
-                    <h1>The Work</h1>
+                    <h1><img class="about-txt" src="{{ app.request.getBasePath() }}/web/assets/images/txt-work-b.png" alt="The Work"/></h1>
 
                     <div class="row">
                         <div class="col-sm-11 col-lg-10 col-xs-12">
@@ -184,7 +141,7 @@
             </div>
         </div>
     </div>
-    <footer class="shown-footer f2">
+    <footer class="shown-footer">
         <div class="inner-footer">
             <div class="row">
                 <div class="col-xs-4 footer-nav">
@@ -213,8 +170,7 @@
                     </a>
                 </div>
                 <div class="col-xs-4 text-right">
-                    <img class="stamp stamp1" src="{{ app.request.getBasePath() }}/web/assets/images/logo-stamp.png" alt="Logo Stamp"/>
-                    <img class="stamp stamp2 shown-stamp" src="{{ app.request.getBasePath() }}/web/assets/images/logo-stamp2.png" alt="Logo Stamp"/>
+                    <img class="stamp stamp1 shown-stamp" src="{{ app.request.getBasePath() }}/web/assets/images/logo-stamp.png" alt="Logo Stamp"/>
                     <div class="legal selective">
                         <p>
                             Copyright 2015 Stevo Strackovski
@@ -283,15 +239,15 @@
             <img src="{{ app.request.getBasePath() }}/web/assets/images/txt-close.png" alt="Close"/>
         </a>
         <img src="{{ app.request.getBasePath() }}/web/assets/images/txt-contact-hd.png" alt="Contact"/>
-        <form method="post" action="#" id="contact-form">
+        <form method="post" action="{{ app.request.baseUrl() ~ '/mail' }}" id="contact-form">
             <div class="form-group">
-                <input type="text" class="form-control" name="name" id="contact_name" placeholder="Your Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Name'" value=""/>
+                <input type="text" class="form-control" name="contact_name" id="contact_name" placeholder="Your Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Name'" value=""/>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" name="email" id="contact_email" placeholder="Your Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email'" value=""/>
+                <input type="text" class="form-control" name="contact_email" id="contact_email" placeholder="Your Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email'" value=""/>
             </div>
             <div class="form-group">
-                <textarea class="form-control" name="message" id="contact_msg" rows="4" placeholder="Your message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Message'"></textarea>
+                <textarea class="form-control" name="contact_msg" id="contact_msg" rows="4" placeholder="Your message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Message'"></textarea>
             </div>
             <button type="submit" class="btn btn-default">SEND YOUR MESSAGE</button> <i class="sending fa fa-spin fa-spinner"></i>
         </form>
