--- a/web/views/home.twig
+++ b/web/views/home.twig
@@ -1,9 +1,7 @@
 {% extends "masters/layout-default.twig" %}
 
 {% block content %}
-    <div class="bg bgh"></div>
-    <img class="bg bg1 shown-bg" src="{{ app.request.getBasePath() }}/web/assets/images/bg1-4.png" alt="bg"/>
-    <img class="bg bg2" src="{{ app.request.getBasePath() }}/web/assets/images/bg2-4.png" alt="bg"/>
+
     <img src="{{ app.request.getBasePath() }}/web/assets/images/bg1-brush.png" class="brush shown-brush" alt="Brush Overlay"/>
     <div class="mobile-overlay"></div>
     <nav class="mobile-nav">
@@ -27,16 +25,16 @@
     <div class="mobile-menu">
         <ul>
             <li class="active">
-                <a href="#" class="go go-home">Home</a>
+                <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale }}" class="go go-home">Home</a>
             </li>
             <li>
-                <a href="#" class="go go-gallery">Gallery</a>
+                <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/gallery' }}" class="go go-gallery">Gallery</a>
             </li>
             <li>
-                <a href="#" class="go go-about">About</a>
+                <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/about' }}" class="go go-about">About</a>
             </li>
             <li>
-                <a href="#" class="go-popup go-contact">Contact</a>
+                <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/contact' }}" class="go-popup go-contact">Contact</a>
             </li>
         </ul>
     </div>
@@ -44,67 +42,24 @@
         <div class="inner-header">
             <ul>
                 <li class="active">
-                    <a href="#" class="go logo go-home"><img src="{{ app.request.getBasePath() }}/web/assets/images/sig-1-bb.png" alt="Strackovski Logo"/></a>
+                    <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale }}" class="go logo go-home"><img src="{{ app.request.getBasePath() }}/web/assets/images/sig-1-bb.png" alt="Strackovski Logo"/></a>
                 </li>
                 <li>
-                    <a href="#" class="go go-gallery"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-gallery-b.png" alt="Gallery"/></a>
+                    <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/gallery' }}" class="go go-gallery"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-gallery-b.png" alt="Gallery"/></a>
                 </li>
                 <li>
-                    <a href="#" class="go go-about"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-about-b.png" alt="About"/></a>
+                    <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/about' }}" class="go go-about"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-about-bb.png" alt="About"/></a>
                 </li>
                 <li class="pull-right">
                     <a href="#" class="stamp-link"><img src="{{ app.request.getBasePath() }}/web/assets/images/behance.png" alt="Behance badge"/></a>
                 </li>
                 <li class="pull-right">
-                    <a href="#" class="go-popup go-contact"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-contact-b.png" alt="Contact"/></a>
-                </li>
-            </ul>
-        </div>
-    </header>
-    <header class="head1">
-        <div class="inner-header">
-            <ul>
-                <li>
-                    <a href="#" class="go logo go-home"><img src="{{ app.request.getBasePath() }}/web/assets/images/sig-1.png" alt="Strackovski Logo"/></a>
-                </li>
-                <li class="active">
-                    <a href="#" class="go go-gallery"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-gallery-bb.png" alt="Gallery"/></a>
-                </li>
-                <li>
-                    <a href="#" class="go go-about"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-about-b.png" alt="About"/></a>
-                </li>
-                <li class="pull-right">
-                    <a href="#" class="stamp-link"><img src="{{ app.request.getBasePath() }}/web/assets/images/behance.png" alt="Behance badge"/></a>
-                </li>
-                <li class="pull-right">
-                    <a href="#" class="go-popup go-contact"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-contact-b.png" alt="Contact"/></a>
-                </li>
-            </ul>
-        </div>
-    </header>
-    <header class="head2">
-        <div class="inner-header">
-            <ul>
-                <li>
-                    <a href="#" class="go logo go-home"><img src="{{ app.request.getBasePath() }}/web/assets/images/sig-2.png" alt="Strackovski Logo"/></a>
-                </li>
-                <li>
-                    <a href="#" class="go go-gallery"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-gallery-g.png" alt="Gallery"/></a>
-                </li>
-                <li class="active">
-                    <a href="#" class="go go-about"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-about-gg.png" alt="About"/></a>
-                </li>
-                <li class="pull-right">
-                    <a href="#" class="stamp-link"><img src="{{ app.request.getBasePath() }}/web/assets/images/behance.png" alt="Behance badge"/></a>
-                </li>
-                <li class="pull-right">
-                    <a href="#" class="go-popup go-contact"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-contact-g.png" alt="Contact"/></a>
+                    <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/contact' }}" class="go-popup go-contact"><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-contact-b.png" alt="Contact"/></a>
                 </li>
             </ul>
         </div>
     </header>
     <div class="ho ho1 shown-ho"></div>
-    <div class="ho ho2"></div>
     <div class="holder">
         <div class="con con0 shown-con">
             <div id="ca-container" class="ca-container">
@@ -113,7 +68,7 @@
                         <div class="ca-item ca-item-{{ i }}">
                             <div class="ca-item-main">
                                 <div class="ca-icon">
-                                    <img src="{{ app.request.getBasePath() }}/web/assets/images/{{ item }}" alt=""/>
+                                    <img src="{{ app.request.getBasePath() }}/web/artwork/{{ item }}" alt=""/>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +81,7 @@
                 {% for item in artwork %}
                     <div class="col-sm-3 col-xs-6">
                         <div class="thumb">
-                            <img src="{{ app.request.getBasePath() }}/web/assets/images/{{ item }}" alt="img"/>
+                            <img src="{{ app.request.getBasePath() }}/web/artwork/{{ item }}" alt="img"/>
                             <div class="preview" data-title="{{ item }}">
                                 <i class="fa fa-search fa-2x"></i>
                             </div>
@@ -139,7 +94,7 @@
             <div class="about-section">
                 <div class="more"><a href="#"><img src="{{ app.request.getBasePath() }}/web/assets/images/arrow2.png" alt="More"/></a></div>
                 <div class="section shown-section">
-                    <h1><img src="{{ app.request.getBasePath() }}/web/assets/images/txt-author-b.png" alt="The Author"/></h1>
+                    <h1><img class="about-txt" src="{{ app.request.getBasePath() }}/web/assets/images/txt-author-b.png" alt="The Author"/></h1>
                     <div class="row">
                         <div class="col-sm-11 col-lg-10 col-xs-12">
                             <p>
@@ -160,7 +115,7 @@
                     </div>
                 </div>
                 <div class="section hidden-section">
-                    <h1>The Work</h1>
+                    <h1><img class="about-txt" src="{{ app.request.getBasePath() }}/web/assets/images/txt-work-b.png" alt="The Work"/></h1>
 
                     <div class="row">
                         <div class="col-sm-11 col-lg-10 col-xs-12">
@@ -190,18 +145,18 @@
                 <div class="col-xs-4 footer-nav">
                     <ul>
                         <li>
-                            <a href="#" class="go go-gallery">Gallery</a>
+                            <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/gallery' }}" class="go go-gallery">Gallery</a>
                         </li>
                         <li>
-                            <a href="#" class="go go-about">About</a>
+                            <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/about' }}" class="go go-about">About</a>
                         </li>
                         <li>
-                            <a href="#" class="go-popup go-contact">Contact</a>
+                            <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/contact' }}" class="go-popup go-contact">Contact</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-xs-4 text-center">
-                    <a href="#" class="go-popup go-signup">
+                    <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/newsletter' }}" class="go-popup go-signup">
                         <i class="fa fa-angle-up fa-2x"></i>
                         <br/>
                         GET NOTIFIED
@@ -219,7 +174,7 @@
                         <p>
                             Copyright 2015 Stevo Strackovski
                         </p>
-                        <p><a href="#" class="go-popup go-legal">Legal</a></p>
+                        <p><a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/legal' }}" class="go-popup go-legal">Legal</a></p>
                     </div>
                 </div>
             </div>
@@ -257,9 +212,9 @@
                 NEW ADDITIONS
             </span>
 
-        <form method="post" action="#" id="signup-form">
+        <form method="post" action="{{ app.request.baseUrl() ~ '/mail' }}" id="signup-form">
             <div class="form-group">
-                <input type="text" class="form-control" name="email" id="user_email" placeholder="my@email.com" onfocus="this.placeholder = ''" onblur="this.placeholder = 'my@email.com'" value=""/>
+                <input type="text" class="form-control" name="subscribe_email" id="user_email" placeholder="my@email.com" onfocus="this.placeholder = ''" onblur="this.placeholder = 'my@email.com'" value=""/>
             </div>
             <button type="submit" class="btn btn-default">SUBSCRIBE NOW</button> <i class="sending fa fa-spin fa-spinner"></i>
         </form>
@@ -283,21 +238,21 @@
             <img src="{{ app.request.getBasePath() }}/web/assets/images/txt-close.png" alt="Close"/>
         </a>
         <img src="{{ app.request.getBasePath() }}/web/assets/images/txt-contact-hd.png" alt="Contact"/>
-        <form method="post" action="#" id="contact-form">
+        <form method="post" action="{{ app.request.baseUrl() ~ '/mail' }}" id="contact-form">
             <div class="form-group">
-                <input type="text" class="form-control" name="name" id="contact_name" placeholder="Your Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Name'" value=""/>
+                <input type="text" class="form-control" name="contact_name" id="contact_name" placeholder="Your Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Name'" value=""/>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" name="email" id="contact_email" placeholder="Your Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email'" value=""/>
+                <input type="text" class="form-control" name="contact_email" id="contact_email" placeholder="Your Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email'" value=""/>
             </div>
             <div class="form-group">
-                <textarea class="form-control" name="message" id="contact_msg" rows="4" placeholder="Your message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Message'"></textarea>
+                <textarea class="form-control" name="contact_msg" id="contact_msg" rows="4" placeholder="Your message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Message'"></textarea>
             </div>
             <button type="submit" class="btn btn-default">SEND YOUR MESSAGE</button> <i class="sending fa fa-spin fa-spinner"></i>
         </form>
     </div>
     <div class="legal-modal">
-        <a href="#" class="close-popup close-legal">
+        <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/legal' }}" class="close-popup close-legal">
             <img src="{{ app.request.getBasePath() }}/web/assets/images/txt-close.png" alt="Close"/>
         </a>
         <h2 class="text-center">Legal</h2>
